// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BookItem Default 1`] = `
<div
  className="css-q5fqw0"
>
  <div
    className="css-k008qs"
  >
    <div
      className="css-1dzdnro"
    >
      <img
        alt=""
        className="css-1ncl0du"
      />
    </div>
    <div
      className="css-6c8cje"
    >
      <h3
        className="css-1lf0679"
      >
        Learning React: Functional Web Development with React and Redux
      </h3>
      <p
        className="css-1u0iejk"
      >
        Alex Banks, Eve Porcello
      </p>
      <p
        className="css-1ozr1hq"
      >
        <svg
          className="css-101jr9b"
          focusable={false}
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M23.555,8.729a1.505,1.505,0,0,0-1.406-.98H16.062a.5.5,0,0,1-.472-.334L13.405,1.222a1.5,1.5,0,0,0-2.81,0l-.005.016L8.41,7.415a.5.5,0,0,1-.471.334H1.85A1.5,1.5,0,0,0,.887,10.4l5.184,4.3a.5.5,0,0,1,.155.543L4.048,21.774a1.5,1.5,0,0,0,2.31,1.684l5.346-3.92a.5.5,0,0,1,.591,0l5.344,3.919a1.5,1.5,0,0,0,2.312-1.683l-2.178-6.535a.5.5,0,0,1,.155-.543l5.194-4.306A1.5,1.5,0,0,0,23.555,8.729Z"
            fill="currentColor"
          />
        </svg>
         
        5.00
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots BookItem Loading 1`] = `
<div
  className="css-q5fqw0"
>
  <div
    className="css-k008qs"
  >
    <div
      className="css-1dzdnro"
    >
      <div
        h="full"
        left={0}
        pos="absolute"
        top={0}
        w="full"
      />
    </div>
    <div
      className="css-6c8cje"
    >
      <div
        className="css-h3yrdz"
      />
      <div
        className="css-1r43fex"
      />
      <div
        className="css-1r43fex"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Homepage Default 1`] = `
<div
  className="css-16emyku"
>
  <div
    className="css-13bb0bn"
  >
    <a
      className="css-1jcjtoe"
    >
      favbook
    </a>
    <form
      className="css-1dj7854"
      onSubmit={[Function]}
    >
      <input
        className="css-1ohh5ys"
        onChange={[Function]}
        placeholder="Search"
      />
      <div
        className="css-mczi6p"
      >
        <button
          aria-label="Search database"
          className="css-12ol5rm"
          type="submit"
        >
          <svg
            aria-hidden={true}
            className="css-1im46kq"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M23.384,21.619,16.855,15.09a9.284,9.284,0,1,0-1.768,1.768l6.529,6.529a1.266,1.266,0,0,0,1.768,0A1.251,1.251,0,0,0,23.384,21.619ZM2.75,9.5a6.75,6.75,0,1,1,6.75,6.75A6.758,6.758,0,0,1,2.75,9.5Z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </form>
  </div>
  <main
    className="css-0"
  >
    <h1
      className="css-1ggh9pt"
    >
      Home
    </h1>
    <p
      className="css-1ss3w6c"
    >
      Welcome to favbook
    </p>
  </main>
</div>
`;

exports[`Storyshots SearchForm Default 1`] = `
<form
  className="css-kjafn5"
  onSubmit={[Function]}
>
  <input
    className="css-1ohh5ys"
    onChange={[Function]}
    placeholder="Search"
  />
  <div
    className="css-mczi6p"
  >
    <button
      aria-label="Search database"
      className="css-12ol5rm"
      type="submit"
    >
      <svg
        aria-hidden={true}
        className="css-1im46kq"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M23.384,21.619,16.855,15.09a9.284,9.284,0,1,0-1.768,1.768l6.529,6.529a1.266,1.266,0,0,0,1.768,0A1.251,1.251,0,0,0,23.384,21.619ZM2.75,9.5a6.75,6.75,0,1,1,6.75,6.75A6.758,6.758,0,0,1,2.75,9.5Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</form>
`;
